--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -30,15 +30,17 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: This post is licensed under :LICENSE_NAME by the author.
-    name: CC BY 4.0
-    link: https://creativecommons.org/licenses/by/4.0/
+    template: (C) Copyright 2022, Tony Mitchell
+  #  template: This post is licensed under :LICENSE_NAME by the author.
+  #  name: CC BY 4.0
+  #  link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: Some rights reserved.
+  brief: All rights reserved.
   verbose: >-
-    Except where otherwise noted, the blog posts on this site are licensed
-    under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
+    Except where otherwise noted, the blog posts on this site are copyrighted.
+#    Except where otherwise noted, the blog posts on this site are licensed
+#    under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
 meta: Powered by :PLATFORM with :THEME theme.
 
