--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -30,7 +30,7 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: (C) Copyright 2022, Tony Mitchell
+    template: © Copyright 2022, Tony Mitchell
   #  template: This post is licensed under :LICENSE_NAME by the author.
   #  name: CC BY 4.0
   #  link: https://creativecommons.org/licenses/by/4.0/
